feat: changed todo to loop todo
